fix some alignments and clean the file

--- a/MediSinag/src/assets/styles/card.css
+++ b/MediSinag/src/assets/styles/card.css
@@ -16,8 +16,7 @@
 .cards {
     display: flex;
     flex-direction: row; 
-    gap: 20px; 
-    justify-content: center; 
+    gap: 20px;  
     flex-wrap: wrap; 
     width: 100%; 
     max-width: 1200px; 
