--- a/MediSinag/src/assets/styles/content.css
+++ b/MediSinag/src/assets/styles/content.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    
 }
 
 .header--title{
@@ -23,6 +23,7 @@
     border-radius: 10px;
     flex-grow:1;
     padding: 3px;
+    width: 100%;
 }
 
 .searchbox{
